# bazel_flask_boilerplate

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  ci-requirements.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
hello_world/: BUILD.bazel  main.py  server.py
hello_world/tests/: test_server.py
scripts/: run_pip_compile.sh  run_tests.sh  start_locally.sh
src/: main.py
