bazel_dep(name = "aspect_rules_py", version = "0.7.3")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "rules_uv", version = "0.23.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11.9",
)
use_repo(
    python,
    python_3_11 = "python_3_11_9",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.11.9",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
