load("@aspect_rules_py//py:defs.bzl", "py_pytest_main", "py_test")
load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "hello_world_library",
    srcs = glob(
        ["**/*.py"],
        exclude = ["test_*.py"],
    ),
    deps = [
        requirement("flask"),
        requirement("waitress"),
        requirement("prometheus-flask-exporter"),
    ],
)

py_binary(
    name = "main",
    srcs = [":hello_world_library"],
    main = "main.py",
    deps = [":hello_world_library"],
)

py_pytest_main(
    name = "__test__",
    deps = [
        requirement("pytest"),
    ],
)

py_test(
    name = "pytest_test",
    srcs = [
        "tests/test_server.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
    ],
)
